<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TravelBuddy</string>
    <string name="days_left">days left</string>
    <string name="current_trip">now</string>
    <string name="expand"> ></string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="name_for_trip">Give your trip a name</string>
    <string name="where_are_you_going">Where are you going?</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="how_are_you_traveling">How are you traveling?</string>
    <string name="flight_number">Ticket number</string>
    <string name="date_time">Departure date &amp; time</string>
    <string name="where_are_you_going_hint">Enter your destination</string>
    <string name="from_hint">dd/mm/yyyy</string>
    <string name="to_hint">dd/mm/yyyy</string>
    <string name="flight_number_hint">Enter your ticket number (optional)</string>
    <string name="date_time_hint">dd/mm/yyyy hh:mm (optional)</string>
    <string name="flight_title">Ticket #</string>
    <string name="climate_separator">/</string>
    <string name="climate_default">--</string>
    <string name="day_today"> - Today</string>
    <string name="sunny">Sunny</string>
    <string name="cloudy">Cloudy</string>
    <string name="rainy">Rainy</string>
    <string name="partially_cloudy">Partially cloudy</string>
    <string name="night_mode">Night mode</string>
    <string name="language">Language</string>
    <string name="add_trip">Add trip</string>
    <string name="ftu_begin">Start</string>
    <string name="ftu_description">Welcome, here you can keep track of your incoming trips and activities!</string>
    <string name="ftu_app">Travel Buddy</string>
    <string name="app_logo">App logo</string>
    <string name="create">Create</string>
    <string name="add_activity">Add activity</string>
    <string name="expand_card">Expand card</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="enter_activity">Enter activity</string>
    <string name="menu_edit_trip">Edit</string>
    <string name="menu_delete_trip">Delete</string>
    <string name="trip_edit_dest_hint">Destination</string>
    <string name="from_edit">From</string>
    <string name="to_edit">To</string>
    <string name="edit_button">Edit</string>
    <string name="cancel_edit">Cancel</string>
    <string name="delete_activity">delete_activity_button</string>
    <string name="name_for_trip_hint">My Super Trip</string>
    <string name="new_name_for_trip">Your trip\'s name</string>
    <string name="select_location_city">%1$s, %2$s, %3$s</string>
    <string name="cannot_be_empty">%1$s can\'t be empty</string>
    <string name="english">English</string>
    <string name="espa_ol">Español</string>
    <string name="english_flag">English Flag</string>
    <string name="spanish_flag">Spanish flag</string>
    <string name="change_language">Change language to Spanish?</string>
    <string name="delete_trip">Delete Trip?</string>
    <string name="day">Day</string>
    <string name="trip_created_successfully">Trip created successfully</string>
    <string name="error_creating_trip">Error creating trip</string>
    <string name="error_fetching_trips">Error: couldn\'t fetch trips from database</string>
    <string name="trip_edited_successfully">Trip edited successfully</string>
    <string name="error_updating_trip">Error updating trip</string>
    <string name="error_fetching_activities">Error getting trip activities</string>
    <string name="activity_created_successfully">Activity created successfully</string>
    <string name="trip_deleted_successfully">Trip deleted successfully</string>
    <string name="weather_no_forecast">Weather data not available: no forecast found for trip</string>
    <string name="weather_high_traffic">Weather data not available: your app has low priority and its request was discarded due to high traffic</string>
    <string name="weather_free_trial">Weather data not available: your free trial requests have expired for today</string>
    <string name="weather_no_city">Weather data not available: no city found with that name</string>
    <string name="cannot_drop_there">Can\'t drop activities there</string>
    <string name="no_activity_found">No activity found with id: %1$d</string>

    <string-array name="transport_options">
        <item>Plane</item>
        <item>Bus</item>
        <item>Train</item>
        <item>Car</item>
        <item>Ship</item>
        <item>Bicycle</item>
        <item>Walking</item>
        <item>Other</item>
    </string-array>

    <string-array name="language_options">
        <item>English</item>
        <item>Español</item>
    </string-array>

</resources>