<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:id="@+id/tripName_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_name_for_trip"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <EditText
            android:id="@+id/tripName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_for_trip_hint"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:maxLength="50"/>

        <TextView
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/where_are_you_going"
            android:paddingTop="20dp"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <EditText
            android:id="@+id/destination_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/where_are_you_going_hint"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:maxLength="50"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/from"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <EditText
                    android:id="@+id/from_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/from_hint"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:maxLength="10"
                    android:focusable="false"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/to"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <EditText
                    android:id="@+id/to_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/to_hint"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:maxLength="10"
                    android:focusable="false"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/how_are_you_traveling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/how_are_you_traveling"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:visibility="gone"/>

        <Spinner
            android:id="@+id/transport_method_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/flight_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/flight_number"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <EditText
            android:id="@+id/flight_number_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/flight_number_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="10"/>

        <TextView
            android:id="@+id/date_time_of_departure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/date_time"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <EditText
            android:id="@+id/departure_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date_time_hint"
            android:importantForAutofill="no"
            android:inputType="datetime"
            android:maxLength="16"
            android:focusable="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_edit_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_edit"
                android:layout_weight="0.5"/>

            <Button
                android:id="@+id/edit_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/edit_button"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5"/>
            
        </LinearLayout>
    </LinearLayout>

</ScrollView>
