<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:id="@+id/destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/where_are_you_going"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <EditText
                    android:id="@+id/destination_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/where_are_you_going_hint"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/from"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="20dp"
                            android:text="@string/from"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <EditText
                            android:id="@+id/from_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/from_hint"
                            android:importantForAutofill="no"
                            android:inputType="date" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/to"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="20dp"
                            android:text="@string/to"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <EditText
                            android:id="@+id/to_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/to_hint"
                            android:importantForAutofill="no"
                            android:inputType="date" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/how_are_you_traveling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/how_are_you_traveling"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <Spinner
                    android:id="@+id/transport_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp" />

                <TextView
                    android:id="@+id/flight_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/flight_number"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <EditText
                    android:id="@+id/flight_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/flight_number_hint"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/date_time_of_departure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/date_time"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <EditText
                    android:id="@+id/date_time_of_departure_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no" />

                <Button
                    android:id="@+id/create_btn"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center"
                    android:text="@string/create" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>